--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,20 @@
 HELP.md
-target/
+**/target/
+**/.idea/
+**/node_modules
+**/.DS_store
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
 ### STS ###
 .apt_generated
@@ -30,4 +42,9 @@ build/
 !**/src/test/**/build/
 
 ### VS Code ###
-.vscode/
+!.vscode/extensions.json
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
