Add MinutesTable entity and frontend homepage navigation

--- a/frontend/apprenticeship-react/Dockerfile
+++ b/frontend/apprenticeship-react/Dockerfile
@@ -3,7 +3,7 @@ ARG api_base_url
 WORKDIR /apprenticeship
 COPY package*.json .
 RUN npm i --silent
-COPY . .
+COPY frontend/frontend-apprenticeship .
 RUN echo "VITE_API_BASE_URL=${api_base_url}" > .env
 EXPOSE 5173
 CMD ["npm", "run", "dev"]
