--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -33,6 +33,12 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- flyway dependency for data migration -->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+
         <!-- spring boot starter data jpa dependency -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
