--- a/frontend/apprenticeship-react/package.json
+++ b/frontend/apprenticeship-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-apprenticeship",
+  "name": "apprenticeship-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.0",
     "@chakra-ui/react": "^2.8.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "formik": "^2.4.2",
     "framer-motion": "^10.13.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
