--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -122,6 +122,11 @@
             <version>6.1.1</version>
         </dependency>
 
+        <!-- send email dependency -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
 
     </dependencies>
 
