--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -53,6 +53,21 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- mockito dependency for test -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>5.4.0</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- java faker dependency for test -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
         <!-- testcontainers dependency -->
         <dependency>
             <groupId>org.testcontainers</groupId>
@@ -127,6 +142,8 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
+
+
 
     </dependencies>
 
