--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -24,7 +24,9 @@ spring:
     show-sql: true
   main:
     web-application-type: servlet
-  # smtp settings
+
+# smtp settings
+Spring:
   mail:
     host: smtp.gmail.com
     port: 587
