--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -35,10 +35,7 @@
         </dependency>
 
         <!-- flyway dependency for data migration -->
-        <dependency>
-            <groupId>org.flywaydb</groupId>
-            <artifactId>flyway-core</artifactId>
-        </dependency>
+
 
         <!-- spring boot starter data jpa dependency -->
         <dependency>
@@ -142,7 +139,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>23.0.0</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
